--- a/.github/workflows/ArtifactsWithCommon.yml
+++ b/.github/workflows/ArtifactsWithCommon.yml
@@ -38,9 +38,12 @@ jobs :
           destination-repository-name: 'test-push'
           user-email: dm.vict.kr@gmail.com
           target-branch: master
+      - run: git checkout out/
       - run: rm -rf out/*
       - run: echo '[linux](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/linux_release/test)' >> out/${{ github.ref_name }}.md
+      - run: echo ' ' >> out/${{ github.ref_name }}.md
       - run: echo '[macos](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/macos_release/test)' >> out/${{ github.ref_name }}.md
+      - run: echo ' ' >> out/${{ github.ref_name }}.md
       - run: echo '[windows](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/windows_release)' >> out/${{ github.ref_name }}.md
       - uses: quizlet/commit-changes@v0.2.0
         with:
