--- a/.github/workflows/ArtifactsWithCommon.yml
+++ b/.github/workflows/ArtifactsWithCommon.yml
@@ -28,7 +28,7 @@ jobs :
           name: windows
           path: out/${{ github.ref_name }}/windows_release
       - name: Pushes to another repository
-        uses: cpina/github-action-push-to-another-repository@v1.3
+        uses: cpina/github-action-push-to-another-repository@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.PRIVATE_TOKEN }}
         with:
@@ -40,11 +40,11 @@ jobs :
           target-branch: master
       - run: git checkout out/
       - run: rm -rf out/*
-      - run: echo '[linux](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/linux_release/test)' >> out/${{ github.ref_name }}.md
+      - run: echo '[linux](https://github.com/dmvict/test-push/raw/master/out/${{ github.ref_name }}/linux_release/test)' >> out/${{ github.ref_name }}.md
       - run: echo ' ' >> out/${{ github.ref_name }}.md
-      - run: echo '[macos](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/macos_release/test)' >> out/${{ github.ref_name }}.md
+      - run: echo '[macos](https://github.com/dmvict/test-push/raw/master/out/${{ github.ref_name }}/macos_release/test)' >> out/${{ github.ref_name }}.md
       - run: echo ' ' >> out/${{ github.ref_name }}.md
-      - run: echo '[windows](https://github.com/dmvict/test-push/raw/master/${{ github.ref_name }}/windows_release)' >> out/${{ github.ref_name }}.md
+      - run: echo '[windows](https://github.com/dmvict/test-push/raw/master/out/${{ github.ref_name }}/windows_release)' >> out/${{ github.ref_name }}.md
       - uses: quizlet/commit-changes@v0.2.0
         with:
           token: ${{ secrets.PRIVATE_TOKEN }}
