--- a/.github/workflows/ArtifactsWithCommon.yml
+++ b/.github/workflows/ArtifactsWithCommon.yml
@@ -18,22 +18,22 @@ jobs :
       - uses: actions/download-artifact@v2
         with:
           name: ubuntu
-          path: out/${{ github.ref_name }}/linux_release
+          path: out/linux_release
       - uses: actions/download-artifact@v2
         with:
           name: macos
-          path: out/${{ github.ref_name }}/macos_release
+          path: out/macos_release
       - uses: actions/download-artifact@v2
         with:
           name: windows
-          path: out/${{ github.ref_name }}/windows_release
+          path: out/windows_release
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.PRIVATE_TOKEN }}
         with:
           source-directory: out
-          target-directory: out
+          target-directory: out/${{ github.ref_name }}
           destination-github-username: 'dmvict'
           destination-repository-name: 'test-push'
           user-email: dm.vict.kr@gmail.com
