--- a/.github/workflows/Delete.yml
+++ b/.github/workflows/Delete.yml
@@ -5,6 +5,8 @@ on: [ push ]
 jobs:
   del_runs:
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Delete workflow runs
         uses: dmvict/clean-action@master
