--- a/.github/workflows/Delete.yml
+++ b/.github/workflows/Delete.yml
@@ -7,19 +7,17 @@ jobs:
     strategy :
       matrix :
         repository :
-          - wTranspile
-          - wModuleForTesting1b
-          - wCensorBasic
+          - clean-workflow-runs
     runs-on: ubuntu-latest
     steps:
       - name: Delete workflow runs
-        uses: dmvict/clean-action@master
+        uses: dmvict/clean-workflow-runs@v1.0.0
         with:
           token: ${{ secrets.PRIVATE_TOKEN }}
           repo: dmvict/${{ matrix.repository }}
           run_conclusions: |
             cancelled
             skipped
-          save_period: 30
+          save_period: 0
           save_min_runs_number: 0
 
