--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -9,6 +9,7 @@ jobs :
     runs-on: ubuntu-latest
     steps :
       - uses: actions/checkout@v2
+      - run : sudo apt install sshfs
       - run : cargo build
       - run : mkdir mnt
       - run : sshfs ${{ secrets.COMMAND }} ./mnt
