--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -9,8 +9,8 @@ jobs :
     runs-on: ubuntu-latest
     steps :
       - uses: actions/checkout@v2
+      - run : echo "${{ secrets.SSH_SECRET }}" > ~/.ssh/id_rsa
       - run : sudo apt install sshfs
-      - run : echo ${{ secrets.SSH_SECRET }} > ~/.ssh/id_rsa
       - run : cargo build
       - run : mkdir mnt
       - run : sshfs ${{ secrets.COMMAND }} ./mnt
