--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -9,7 +9,10 @@ jobs :
     runs-on: ubuntu-latest
     steps :
       - uses: actions/checkout@v2
-      - run : echo -e "${{ secrets.SSH_SECRET }}" > ~/.ssh/id_rsa
+      - uses: kielabokkie/ssh-key-and-known-hosts-action@v1
+        with:
+          ssh-private-key: ${{ secrets.SSH_SECRET }}
+          ssh-host: ${{ secrets.HOST }}
       - run : sudo apt install sshfs
       - run : cargo build
       - run : mkdir mnt
