--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -9,10 +9,12 @@ jobs :
     runs-on: ubuntu-latest
     steps :
       - uses: actions/checkout@v2
-      - uses: kielabokkie/ssh-key-and-known-hosts-action@v1
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
         with:
-          ssh-private-key: ${{ secrets.SSH_SECRET }}
-          ssh-host: ${{ secrets.HOST }}
+          key: ${{ secrets.SSH_SECRET }}
+          name: id_rsa
+          if_key_exists: replace
       - run : sudo apt install sshfs
       - run : cargo build
       - run : mkdir mnt
