--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -9,7 +9,7 @@ jobs :
     runs-on: ubuntu-latest
     steps :
       - uses: actions/checkout@v2
-      - uses: webfactory/ssh-agent@v0.5.4
+      - uses: tanmancan/action-setup-ssh-agent-key@1.0.0
         with:
           ssh-private-key: ${{ secrets.SSH_SECRET }}
       - run : sudo apt install sshfs
