--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -9,16 +9,14 @@ jobs :
     runs-on: ubuntu-latest
     steps :
       - uses: actions/checkout@v2
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
+      - uses: kielabokkie/ssh-key-and-known-hosts-action@v1
         with:
-          key: ${{ secrets.SSH_SECRET }}
-          name: id_rsa
-          known_hosts: ${{ secrets.KNOWN }}
+          ssh-private-key: ${{ secrets.SSH_SECRET }}
+          ssh-host: 167.172.101.139
       - run : sudo apt install sshfs
       - run : cargo build
       - run : mkdir mnt
-      - run : sshfs ${{ secrets.COMMAND }} ./mnt
+      - run : sshfs server@167.172.101.139:/home/server ./mnt
       - run : mkdir -p ./mnt/out/v1
       - run : cp -R target/debug ./mnt/out/v1
       - run : umount ./mnt
