--- a/.github/workflows/Pr.yml
+++ b/.github/workflows/Pr.yml
@@ -1,16 +1,36 @@
 
 name: Pr
 
-on :
-  pull_request :
-    branches-ignore:
-      - master
+on:
+  pull_request_target:
+    types: [opened, edited]
 
 jobs:
-  run:
-    runs-on : ubuntu-latest
-    steps :
-      - run: echo YES
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: Vankka/pr-target-branch-action@v1.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          target: master
+          include: beta
+          exclude: Github:.*
+          change-to: alpha
+          comment: |
+            Your PR was set to `main`, PRs should be sent to `development`
+            The base branch of this PR has been automatically changed to `development`, please check that there are no merge conflicts
+
+# on :
+#   pull_request :
+#     branches-ignore:
+#       - master
+#
+# jobs:
+#   run:
+#     runs-on : ubuntu-latest
+#     steps :
+#       - run: echo YES
 
 
 # env:
