--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -5,20 +5,18 @@ on: pull_request
 
 jobs :
 
-  build :
-    runs-on: ubuntu-latest
-    steps :
-      - uses: actions/checkout@v2
-      - run : cargo build
-
-  automerge:
-    needs: build
+  build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ github.event.number}}
-      - name: Merge Pull Request
-        uses: juliangruber/merge-pull-request-action@v1
+      - uses: Vankka/pr-target-branch-action@v1.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          number: ${{ github.event.number }}
-          method: merge
+          target: master
+          include: beta
+          exclude: Github:.*
+          change-to: alpha
+          comment: |
+            Your PR was set to `main`, PRs should be sent to `development`
+            The base branch of this PR has been automatically changed to `development`, please check that there are no merge conflicts
+
