--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -16,7 +16,7 @@ jobs :
         with:
           target: master
           # include: beta
-          exclude: beta
+          exclude: dmvict:beta
           change-to: alpha
           comment: |
             Your PR was set to `main`, PRs should be sent to `development`
