--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -1,24 +1,53 @@
 
-name : command
+name : Alpha
 
-on: pull_request
+on :
+  pull_request :
+    branches:
+      - beta
+
+env:
+  CARGO_TERM_COLOR: always
 
 jobs :
 
-  build :
-    runs-on: ubuntu-latest
-    steps :
-      - uses: actions/checkout@v2
-      - run : cargo build
-
-  automerge:
-    needs: build
+  cancel:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ github.event.number}}
-      - name: Merge Pull Request
+    - uses: actions/checkout@v1
+    - uses: n1hility/cancel-previous-runs@v2
+      with:
+        token: ${{ secrets.PRIVATE_TOKEN }}
+
+  check:
+    needs: cancel
+    runs-on: ubuntu-latest
+    steps:
+      - uses: Vankka/pr-target-branch-action@v1.1
+        with:
+          target: beta
+          exclude: motion-design-school:alpha
+      - name: Error message
+        if: ${{ failure() }}
+        run : echo -e 'To save the application stability the repository uses a system to forward changes from an unstable branch to a stable.\nThe unstable branch is `alpha`. All user pull requests should be opened to this branch.\nThe staging branch is `beta`. Changes to this branch are forwarded by a pull request from branch `alpha` automatically.\nThe stable branch is `master`. Changes to this branch are forwarded by a pull request from branch `beta` automatically. Forwarded changes merge manually after review.\n\nThe base branch of this PR has been automatically changed to `alpha` taking into account the described system `alpha -> beta -> master`.\nPlease, check that there are no merge conflicts.'
+
+  run:
+    needs: check
+    runs-on: ubuntu-latest
+    steps:
+      - run: sleep 180 && echo done!
+
+  forward :
+    needs:
+      - android
+      - desktop
+      - ios
+      - web
+    runs-on : ubuntu-latest
+    steps :
+      - name: Automerge passed pull request
         uses: juliangruber/merge-pull-request-action@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PRIVATE_TOKEN }}
           number: ${{ github.event.number }}
           method: merge
