--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -33,7 +33,7 @@ jobs :
           exclude: dmvict:alpha
           comment : 'To save the application stability the repository uses a system to forward changes from an unstable branch to a stable.\nThe unstable branch is `alpha`. All user pull requests should be opened to this branch.\nThe staging branch is `beta`. Changes to this branch are forwarded by a pull request from branch `alpha` automatically.\nThe stable branch is `master`. Changes to this branch are forwarded by a pull request from branch `beta` automatically. Forwarded changes merge manually after review.\n\nThe base branch of this PR has been automatically changed to `alpha` taking into account the described system `alpha -> beta -> master`.\nPlease, check that there are no merge conflicts.'
       - name: check output
-        run : echo ${{ steps.validation.outputs.wrong-target }}
+        run : echo ${{ steps.validation.outputs.wrong-target == true }}
 
   run:
     needs: check
