--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -34,8 +34,12 @@ jobs :
           target: beta
           exclude: dmvict:alpha
           comment : 'To save the application stability the repository uses a system to forward changes from an unstable branch to a stable.\nThe unstable branch is `alpha`. All user pull requests should be opened to this branch.\nThe staging branch is `beta`. Changes to this branch are forwarded by a pull request from branch `alpha` automatically.\nThe stable branch is `master`. Changes to this branch are forwarded by a pull request from branch `beta` automatically. Forwarded changes merge manually after review.\n\nThe base branch of this PR has been automatically changed to `alpha` taking into account the described system `alpha -> beta -> master`.\nPlease, check that there are no merge conflicts.'
-      - name: check output
-        run : echo ${{ steps.validation.outputs.wrong-target == 'true' }}
+      - name: convert to draft
+        if : ${{ steps.validation.outputs.wrong-target == 'true' }}
+        uses: raviraipuria/convert-to-draft@v1.0.1
+        with:
+          repo-token: ${{ secrets.PRIVATE_TOKEN }}
+          days-before-convert-draft: 0
 
   android:
     needs: check
