--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -11,27 +11,28 @@ jobs :
     runs-on: ubuntu-latest
     steps:
       - run : echo ref ${{ github.ref }}
-      - run : echo base_ref ${{ github.base_ref }}
-      - run : echo head_ref ${{ github.head_ref }}
+      - run : echo action repository ${{ github.action_repository }}
       - run : echo actor ${{ github.actor }}
-      - uses: Vankka/pr-target-branch-action@v1.1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          target: master
-          # include: beta
-          exclude: dmvict:beta
-          # change-to: alpha
-          # comment: |
-          #   Your PR was set to `main`, PRs should be sent to `development`
-          #   The base branch of this PR has been automatically changed to `development`, please check that there are no merge conflicts
-      - if: ${{ failure() }}
-        run : |
-          echo -e 'The base branch of this PR has been automatically changed to `development`,\n\nplease check that there are no merge conflicts'
+      - run : echo repository ${{ github.repository }}
+      - run : echo repository owner ${{ github.repository_owner }}
+      # - uses: Vankka/pr-target-branch-action@v1.1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     target: master
+      #     # include: beta
+      #     exclude: dmvict:beta
+      #     # change-to: alpha
+      #     # comment: |
+      #     #   Your PR was set to `main`, PRs should be sent to `development`
+      #     #   The base branch of this PR has been automatically changed to `development`, please check that there are no merge conflicts
+      # - if: ${{ failure() }}
+      #   run : |
+      #     echo -e 'The base branch of this PR has been automatically changed to `development`,\n\nplease check that there are no merge conflicts'
 
-  android:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - run : echo ref ${{ github.ref }}
+  # android:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run : echo ref ${{ github.ref }}
 
