--- a/.github/workflows/Common2.yml
+++ b/.github/workflows/Common2.yml
@@ -15,6 +15,7 @@ jobs :
       - run : echo actor ${{ github.actor }}
       - run : echo repository ${{ github.repository }}
       - run : echo repository owner ${{ github.repository_owner }}
+      - run : echo repository owner ${{ github.event.pull_request.head.repo.fork }}
       # - uses: Vankka/pr-target-branch-action@v1.1
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
