--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -14,7 +14,7 @@ jobs :
     strategy :
       fail-fast : false
       matrix :
-        version : [ ${{ inputs.matrix }} ]
+        version : ${{ inputs.matrix }}
     runs-on : ubuntu-latest
     steps :
       - name : echo ${{ matrix.version }}
