--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -11,21 +11,10 @@ on :
 jobs :
 
   fast :
-    if : ${{ inputs.matrix == 'single' }}
     strategy :
       fail-fast : false
       matrix :
-        version : [ 14.x ]
-    runs-on : ubuntu-latest
-    steps :
-      - run : echo ${{ matrix.version }}
-
-  not_fast :
-    if : ${{ inputs.matrix != 'single' }}
-    strategy :
-      fail-fast : false
-      matrix :
-        version : [ 14.x, 15.x, 16.x ]
+        version : ${{ toJson( inputs.matrix ) }}
     runs-on : ubuntu-latest
     steps :
       - run : echo ${{ matrix.version }}
