--- a/.github/workflows/Common.yml
+++ b/.github/workflows/Common.yml
@@ -13,8 +13,7 @@ jobs :
   fast :
     strategy :
       fail-fast : false
-      matrix :
-        version : ${{ fromJson( inputs.matrix ) }}
+      matrix : ${{ fromJson( inputs.matrix ) }}
     runs-on : ubuntu-latest
     steps :
       - run : echo ${{ matrix.version }}
