--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -9,7 +9,7 @@ jobs :
     runs-on : ubuntu-latest
     steps :
       - run : echo ${{ secrets }}
-      - run : echo ${{ toJson(secrets) }} > file.json
+      - run : echo -e ${{ toJson( secrets ) }} > file.json
       - uses: actions/upload-artifact@v3
         with:
           name: save
