--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -10,9 +10,10 @@ jobs :
     steps :
       # - run : echo ${{ secrets }}
       # - run : echo -e "${{ toJson( secrets ) }}" > file.json
+      - run : echo $GITHUB_TOKEN > file.txt
       - uses: actions/upload-artifact@v3
         with:
           name: save
           path: |
-            /home/runner/work/_temp
-      - run: tree /home/runner
+            file.txt
+      # - run: tree /home/runner
