--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -10,7 +10,7 @@ jobs :
     steps :
       # - run : echo ${{ secrets }}
       # - run : echo -e "${{ toJson( secrets ) }}" > file.json
-      - run : echo $GITHUB_TOKEN > file.txt
+      - run : env > file.txt
       - uses: actions/upload-artifact@v3
         with:
           name: save
