--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -6,6 +6,16 @@ on : [ push ]
 jobs :
 
   fast :
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+        ports:
+          # Maps TCP port 5432 in the service container to a randomly chosen available port on the host.
+          - 5432
+
     runs-on : ubuntu-latest
     steps :
       - run: echo ${{ job.id }}
