--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -20,6 +20,8 @@ jobs :
     steps :
       - run: echo ${{ job.id }}
       - run: echo "${{ toJson( job ) }}"
+      - run: /usr/bin/docker ps --all --filter status=running --no-trunc --format "{{.ID}}"
       - name : id
         run: echo "::set-output name=id::$(/usr/bin/docker ps --all --filter status=running --no-trunc --format \"{{.ID}}\")"
+      - run: echo "${{ toJson( steps.id.outputs ) }}"
       - run: /usr/bin/docker inspect ${{ steps.id.outputs.id }}
