--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -22,6 +22,9 @@ jobs :
       - run: echo "${{ toJson( job ) }}"
       - run: /usr/bin/docker ps --all --filter status=running --no-trunc --format "{{.ID}}"
       - name : id
-        run: echo "::set-output name=id::$(/usr/bin/docker ps --all --filter status=running --no-trunc --format \"{{.ID}}\")"
+        run: |
+          id=$(/usr/bin/docker ps --all --filter status=running --no-trunc --format "{{.ID}}")
+          echo $id
+          echo '::set-output name=id::$id'
       - run: echo "${{ toJson( steps.id.outputs ) }}"
       - run: /usr/bin/docker inspect ${{ steps.id.outputs.id }}
