--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -26,6 +26,6 @@ jobs :
         run: |
           id=$(/usr/bin/docker ps --all --filter status=running --no-trunc --format "{{.ID}}")
           echo $id
-          echo '::set-output name=id::$id'
+          echo '::set-output name=id::"$id"'
       - run: echo "${{ toJson( steps.id ) }}"
       - run: /usr/bin/docker inspect ${{ steps.id.outputs.id }}
