--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -20,12 +20,11 @@ jobs :
     steps :
       - run: echo ${{ job.id }}
       - run: echo "${{ toJson( job ) }}"
-      - run: /usr/bin/docker ps --all --filter status=running --no-trunc --format "{{.ID}}"
       - name: get id
         id : id
         run: |
           id=$(/usr/bin/docker ps --all --filter status=running --no-trunc --format "{{.ID}}")
-          echo $id
+          echo its id $id
           echo '::set-output name=id::"$id"'
       - run: echo "${{ toJson( steps.id ) }}"
       - run: /usr/bin/docker inspect ${{ steps.id.outputs.id }}
