--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -17,7 +17,7 @@ jobs :
           - 5432
     strategy :
       matrix:
-        os: [ windows-latest ]
+        os: [ macos-latest ]
 
     runs-on : ${{ matrix.os }}
     steps :
