--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -6,23 +6,24 @@ on : [ push ]
 jobs :
 
   fast :
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-        ports:
-          # Maps TCP port 5432 in the service container to a randomly chosen available port on the host.
-          - 5432
+    # services:
+    #   postgres:
+    #     image: postgres
+    #     env:
+    #       POSTGRES_PASSWORD: postgres
+    #     options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    #     ports:
+    #       # Maps TCP port 5432 in the service container to a randomly chosen available port on the host.
+    #       - 5432
     strategy :
       matrix:
-        os: [ macos-latest ]
+        os: [ windows-latest ]
 
     runs-on : ${{ matrix.os }}
     steps :
-      - run: echo ${{ job.id }}
-      - run: echo "${{ toJson( job ) }}"
+      - run: where docker
+      # - run: echo ${{ job.id }}
+      # - run: echo "${{ toJson( job ) }}"
       # - name: get id
       #   id : id
       #   run: |
