--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -35,4 +35,4 @@ jobs :
           echo its id $id
           echo "::set-output name=id::$id"
       - run: echo "${{ toJson( steps.id ) }}"
-      - run: /usr/bin/docker inspect ${{ steps.id.outputs.id }}  fast :
+      - run: /usr/bin/docker inspect ${{ steps.id.outputs.id }}
