--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -48,6 +48,7 @@ jobs :
       # - name : Conditional
       #   if: ${{ matrix.modules == 'module1' }}
       #   run: echo module1
+      - uses : actions/checkout@v2
       - run : gh pr view 45 --json id --jq .id
         env:
             GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
