--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -47,12 +47,8 @@ jobs :
       result: ${{ steps.result.outputs.result }}
     runs-on : ubuntu-latest
     steps :
-      - if: ${{ matrix.modules == 'module1' }}
-        id: result
-        run: echo "::set-output name=result::module1"
-      - if: ${{ matrix.modules == 'module2' }}
-        id: result
-        run: echo "::set-output name=result::module2"
+      - id: result
+        run: echo "::set-output name=result::${{ matrix.modules }}"
 
   second:
     needs: fast
